# MAD-SSA

./: .gitignore  README.md  _config.yml  _toc.yml  align_models.py  analyze_modes.py  create_3d_mesh.py  create_mesh.py  create_models_pca.py  create_point_cloud.py  create_raw_3D.py  data_folder.sh  errors_pc.py  get_com_rv.py  lv_orient.ipynb  lv_orient.py  mesher.py  meshing.py  meshing_utils.py  movie_maker.py  multi_continous_to_binary.py  mv_metrics_modes.py  pca.py  pca_clinical.pkl  pyproject.toml  rotate_fixer.py  run_all_meshes.py  statistical_analysis_binary.py  statistical_analysis_continous.py  to_global_coordinates.ipynb  to_global_coordinates.py  utils_paraview_cross_section_view.py
.github/workflows/: build_docs.yml  deploy_docs.yml
Aligned_Models/: MAD_103_aligned_points.txt  MAD_105_aligned_points.txt  MAD_106_aligned_points.txt  MAD_107_aligned_points.txt  MAD_109_aligned_points.txt  MAD_112_aligned_points.txt  MAD_114_aligned_points.txt  MAD_118_aligned_points.txt  MAD_11_aligned_points.txt  MAD_120_aligned_points.txt  MAD_121_aligned_points.txt  MAD_123_aligned_points.txt  MAD_126_aligned_points.txt  MAD_127_aligned_points.txt  MAD_129_aligned_points.txt  MAD_12_aligned_points.txt  MAD_130_aligned_points.txt  MAD_132_aligned_points.txt  MAD_137_aligned_points.txt  MAD_138_aligned_points.txt  MAD_139_aligned_points.txt  MAD_141_aligned_points.txt  MAD_142_aligned_points.txt  MAD_144_aligned_points.txt  MAD_145_aligned_points.txt  MAD_146_aligned_points.txt  MAD_149_aligned_points.txt  MAD_150_aligned_points.txt  MAD_151_aligned_points.txt  MAD_152_aligned_points.txt  MAD_157_aligned_points.txt  MAD_158_aligned_points.txt  MAD_15_aligned_points.txt  MAD_160_aligned_points.txt  MAD_162_aligned_points.txt  MAD_163_aligned_points.txt  MAD_164_aligned_points.txt  MAD_166_aligned_points.txt  MAD_167_aligned_points.txt  MAD_168_aligned_points.txt  (+57 more)
PCA_Results/: pca_scores.csv  pca_variance_ratios.csv
PCA_Results_final/: pca_scores.csv  pca_variance_ratios.csv
PCA_Results_final_height/point_clouds/: avg_coords.txt  mode_10_minus_coords.txt  mode_10_plus_coords.txt  mode_1_minus_coords.txt  mode_1_plus_coords.txt  mode_2_minus_coords.txt  mode_2_plus_coords.txt  mode_3_minus_coords.txt  mode_3_plus_coords.txt  mode_4_minus_coords.txt  mode_4_plus_coords.txt  mode_5_minus_coords.txt  mode_5_plus_coords.txt  mode_6_minus_coords.txt  mode_6_plus_coords.txt  mode_7_minus_coords.txt  mode_7_plus_coords.txt  mode_8_minus_coords.txt  mode_8_plus_coords.txt  mode_9_minus_coords.txt  mode_9_plus_coords.txt
controls/scripts/: alignment.py  create_point_cloud.py  get_com_rv.py  main.py  pca.py
docs/: .buildinfo  README.html  demo_pc.html  demo_pc.md  demo_pipeline.html  genindex.html  index.md  objects.inv  search.html  searchindex.js
docs/_sources/: README.md
meshes/00_results_avg_coords/: Endo_mesh_errors.txt  Epi_mesh_errors.txt
meshes/00_results_mode_10_minus_coords/: Endo_mesh_errors.txt  Epi_mesh_errors.txt
meshes/00_results_mode_10_plus_coords/: Endo_mesh_errors.txt  Epi_mesh_errors.txt
meshes/00_results_mode_1_minus_coords/: Endo_mesh_errors.txt  Epi_mesh_errors.txt
meshes/00_results_mode_2_minus_coords/: Endo_mesh_errors.txt  Epi_mesh_errors.txt
meshes/00_results_mode_2_plus_coords/: Endo_mesh_errors.txt  Epi_mesh_errors.txt
meshes/00_results_mode_3_minus_coords/: Endo_mesh_errors.txt  Epi_mesh_errors.txt
meshes/00_results_mode_3_plus_coords/: Endo_mesh_errors.txt  Epi_mesh_errors.txt
meshes/00_results_mode_4_minus_coords/: Endo_mesh_errors.txt  Epi_mesh_errors.txt
meshes/00_results_mode_4_plus_coords/: Endo_mesh_errors.txt  Epi_mesh_errors.txt
meshes/00_results_mode_5_minus_coords/: Endo_mesh_errors.txt  Epi_mesh_errors.txt
saxomode-book/: README.md  _config.yml  _toc.yml  demo_pipeline.md
settings/: MAD_1.json  MAD_103.json  MAD_105.json  MAD_106.json  MAD_107.json  MAD_109.json  MAD_11.json  MAD_112.json  MAD_12.json  MAD_120.json  MAD_123.json  MAD_126.json  MAD_129.json  MAD_130.json  MAD_132.json  MAD_137.json  MAD_138.json  MAD_142.json  MAD_144.json  MAD_145.json  MAD_146.json  MAD_149.json  MAD_15.json  MAD_150.json  MAD_157.json  MAD_160.json  MAD_162.json  MAD_166.json  MAD_167.json  MAD_169.json  MAD_17.json  MAD_173.json  MAD_176.json  MAD_178.json  MAD_182.json  MAD_190.json  MAD_195.json  MAD_202.json  MAD_204.json  MAD_207.json  (+22 more)
src/saxomode/: alignment.py  create_3d_mesh.py  (+5 more)
ventricshape-book/: README.md  _config.yml  demo_pc.md  demo_pipeline.md
(+249 files in other folders)
