[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "saxomode"
version = "0.1.0"
description = "A toolkit for 3D ventricular shape analysis"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Giulia Monopoli", email = "giulia@simula.no" },
  { name = "Javad Sadeghinia", email = "mjsadeghinia@outlook.com" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["ventricule", "point-cloud", "mesh"]
urls = { Homepage = "https://github.com/ComputationalPhysiology/MAD-SSA/tree/clean_code" }

dependencies = [
  "numpy==1.23",
  "pandas==2.2.3",
  "scikit-learn",
  "meshio",
  "opencv-python",
  "ventric-mesh @ git+https://github.com/mjsadeghinia/VentricMesh.git",
]

[project.optional-dependencies]
test = [
  "pytest",
]
docs = [
  "jupyter-book",
  "jupyter",
]

[project.scripts]
saxomode-pipeline    = "saxomode.main:main"
saxomode-pc = "saxomode.main_pc:main"
saxomode-alignment = "saxomode.alignment:main"
saxomode-pca = "saxomode.pca:main"
saxomode-createmesh = "saxomode.create_3d_mesh:main"
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
